feat: Expand draggable grid with additional columns and items
- Added 20 new columns to the draggable grid for enhanced product display.
- Updated CSS animation duration for smoother scrolling effect, increasing from 30s to 60s.
- Adjusted translation percentage in keyframes for improved scrolling performance.

--- a/corano/index.html
+++ b/corano/index.html
@@ -555,6 +555,108 @@
                             <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
                             <div class="marquee-item"><img src="assets/draggable-grid-public/ring-7.png" alt="Vase Collection" /></div>
                         </div>
+                        <!-- Fourth column (additional set) -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-5.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/earring-1.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Fifth column (additional set) -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-7.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-5.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Sixth column (additional set) -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/earring-1.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-7.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Seventh column (additional set) -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-5.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/earring-1.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Eighth column (additional set) -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-7.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-5.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Ninth column (additional set) -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/earring-1.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Tenth column (additional set) -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-7.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-5.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Eleventh column (additional set) -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/earring-1.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-7.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Twelfth column (additional set) -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-5.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/earring-1.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Thirteenth column (additional set) -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-7.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-5.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Fourteenth column (additional set) -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/earring-1.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Fifteenth column (additional set) -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-7.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-5.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Sixteenth column (additional set) -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/earring-1.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-7.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Seventeenth column (additional set) -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-5.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/earring-1.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Eighteenth column (additional set) -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-7.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-5.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Nineteenth column (additional set) -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/earring-1.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Twentieth column (additional set) -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-7.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-5.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
+                        </div>
                     </div>
                 </div>
             </section>
