--- a/corano/cart.html
+++ b/corano/cart.html
@@ -31,6 +31,8 @@
     <link rel="stylesheet" href="assets/css/plugins/jqueryui.min.css">
     <!-- main style css -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- cart page css -->
+    <link rel="stylesheet" href="assets/css/cart-page.css">
 
 </head>
 
@@ -478,59 +480,16 @@
                                 <table class="table table-bordered">
                                     <thead>
                                         <tr>
-                                            <th class="pro-thumbnail">Thumbnail</th>
-                                            <th class="pro-title">Product</th>
-                                            <th class="pro-price">Price</th>
+                                            <th class="pro-number">No.</th>
+                                            <th class="pro-thumbnail">Model</th>
+                                            <th class="pro-title">Name</th>
                                             <th class="pro-quantity">Quantity</th>
-                                            <th class="pro-subtotal">Total</th>
+                                            <th class="pro-price">Price</th>
                                             <th class="pro-remove">Remove</th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr>
-                                            <td class="pro-thumbnail"><a href="#"><img class="img-fluid" src="assets/img/product/product-1.jpg" alt="Product" /></a></td>
-                                            <td class="pro-title"><a href="#">Diamond Exclusive Ornament</a></td>
-                                            <td class="pro-price"><span>$295.00</span></td>
-                                            <td class="pro-quantity">
-                                                <div class="pro-qty"><input type="text" value="1"></div>
-                                            </td>
-                                            <td class="pro-subtotal"><span>$295.00</span></td>
-                                            <td class="pro-remove"><a href="#"><i class="fa fa-trash-o"></i></a></td>
-                                        </tr>
-                                        <tr>
-                                            <td class="pro-thumbnail"><a href="#"><img class="img-fluid" src="assets/img/product/product-2.jpg" alt="Product" /></a></td>
-                                            <td class="pro-title"><a href="#">Perfect Diamond Jewelry</a></td>
-                                            <td class="pro-price"><span>$275.00</span></td>
-                                            <td class="pro-quantity">
-                                                <div class="pro-qty"><input type="text" value="2"></div>
-                                            </td>
-                                            <td class="pro-subtotal"><span>$550.00</span></td>
-                                            <td class="pro-remove"><a href="#"><i class="fa fa-trash-o"></i></a></td>
-                                        </tr>
-                                        <tr>
-                                            <td class="pro-thumbnail"><a href="#"><img class="img-fluid" src="assets/img/product/product-3.jpg" alt="Product" /></a></td>
-                                            <td class="pro-title"><a href="#">Handmade Golden Necklace</a></td>
-                                            <td class="pro-price"><span>$295.00</span></td>
-                                            <td class="pro-quantity">
-                                                <div class="pro-qty">
-                                                    <input type="text" value="1" />
-                                                </div>
-                                            </td>
-                                            <td class="pro-subtotal"><span>$295.00</span></td>
-                                            <td class="pro-remove"><a href="#"><i class="fa fa-trash-o"></i></a></td>
-                                        </tr>
-                                        <tr>
-                                            <td class="pro-thumbnail"><a href="#"><img class="img-fluid" src="assets/img/product/product-4.jpg" alt="Product" /></a></td>
-                                            <td class="pro-title"><a href="#">Diamond Exclusive Ornament</a></td>
-                                            <td class="pro-price"><span>$110.00</span></td>
-                                            <td class="pro-quantity">
-                                                <div class="pro-qty">
-                                                    <input type="text" value="3" />
-                                                </div>
-                                            </td>
-                                            <td class="pro-subtotal"><span>$110.00</span></td>
-                                            <td class="pro-remove"><a href="#"><i class="fa fa-trash-o"></i></a></td>
-                                        </tr>
+                                        <!-- Cart items will be dynamically populated here -->
                                     </tbody>
                                 </table>
                             </div>
@@ -556,17 +515,21 @@
                                     <h6>Cart Totals</h6>
                                     <div class="table-responsive">
                                         <table class="table">
-                                            <tr>
+                                            <tr class="subtotal">
                                                 <td>Sub Total</td>
-                                                <td>$230</td>
+                                                <td>$0.00</td>
                                             </tr>
-                                            <tr>
-                                                <td>Shipping</td>
-                                                <td>$70</td>
+                                            <tr class="eco-tax">
+                                                <td>Eco Tax (2%)</td>
+                                                <td>$0.00</td>
+                                            </tr>
+                                            <tr class="vat">
+                                                <td>VAT (20%)</td>
+                                                <td>$0.00</td>
                                             </tr>
                                             <tr class="total">
                                                 <td>Total</td>
-                                                <td class="total-amount">$300</td>
+                                                <td class="total-amount">$0.00</td>
                                             </tr>
                                         </table>
                                     </div>
@@ -901,6 +864,10 @@
     <script src="assets/js/plugins/google-map.js"></script>
     <!-- Main JS -->
     <script src="assets/js/main.js"></script>
+    <!-- Cart Functionality -->
+    <script src="assets/js/cart-functionality.js"></script>
+    <!-- Cart Page -->
+    <script src="assets/js/cart-page.js"></script>
 </body>
 
 </html>
