feat: Remove update cart button

--- a/corano/cart.html
+++ b/corano/cart.html
@@ -501,9 +501,9 @@
                                         <button class="btn btn-sqr">Apply Coupon</button>
                                     </form>
                                 </div>
-                                <div class="cart-update">
+                                <!-- <div class="cart-update">
                                     <a href="#" class="btn btn-sqr">Update Cart</a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
