feat: Implement seamless infinite scrolling in draggable grid
- Removed static duplicate columns and integrated GSAP for dynamic cloning of grid columns.
- Updated CSS to support cloned grid for improved performance and interaction.
- Enhanced JavaScript to manage infinite marquee functionality with responsive adjustments.

--- a/corano/draggable-grid-section.html
+++ b/corano/draggable-grid-section.html
@@ -117,164 +117,7 @@
                                         <div data-id="4"><img src="assets/draggable-grid/public/img-4.png" alt="Jewelry Piece" /></div>
                                     </div>
                                 </div>
-                                <!-- Duplicate columns for seamless infinite scroll -->
-                                <div class="column">
-                                    <div class="product marquee-item">
-                                        <div data-id="3"><img src="assets/draggable-grid/public/img-3.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="7"><img src="assets/draggable-grid/public/img-7.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="1"><img src="assets/draggable-grid/public/img-1.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="5"><img src="assets/draggable-grid/public/img-5.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="2"><img src="assets/draggable-grid/public/img-2.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                </div>
-                                <div class="column">
-                                    <div class="product marquee-item">
-                                        <div data-id="4"><img src="assets/draggable-grid/public/img-4.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="6"><img src="assets/draggable-grid/public/img-6.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="3"><img src="assets/draggable-grid/public/img-3.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="7"><img src="assets/draggable-grid/public/img-7.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="1"><img src="assets/draggable-grid/public/img-1.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                </div>
-                                <div class="column">
-                                    <div class="product marquee-item">
-                                        <div data-id="5"><img src="assets/draggable-grid/public/img-5.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="2"><img src="assets/draggable-grid/public/img-2.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="4"><img src="assets/draggable-grid/public/img-4.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="6"><img src="assets/draggable-grid/public/img-6.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="1"><img src="assets/draggable-grid/public/img-1.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                </div>
-                                <div class="column">
-                                    <div class="product marquee-item">
-                                        <div data-id="3"><img src="assets/draggable-grid/public/img-3.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="5"><img src="assets/draggable-grid/public/img-5.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="1"><img src="assets/draggable-grid/public/img-1.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="6"><img src="assets/draggable-grid/public/img-6.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="2"><img src="assets/draggable-grid/public/img-2.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                </div>
-                                <div class="column">
-                                    <div class="product marquee-item">
-                                        <div data-id="4"><img src="assets/draggable-grid/public/img-4.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="6"><img src="assets/draggable-grid/public/img-6.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="3"><img src="assets/draggable-grid/public/img-3.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="5"><img src="assets/draggable-grid/public/img-5.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="1"><img src="assets/draggable-grid/public/img-1.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                </div>
-                                <div class="column">
-                                    <div class="product marquee-item">
-                                        <div data-id="5"><img src="assets/draggable-grid/public/img-5.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="6"><img src="assets/draggable-grid/public/img-6.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="2"><img src="assets/draggable-grid/public/img-2.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="1"><img src="assets/draggable-grid/public/img-1.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="4"><img src="assets/draggable-grid/public/img-4.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                </div>
-                                <!-- Additional set for large screens (1920px+) -->
-                                <!-- First column (additional set) -->
-                                <div class="column">
-                                    <div class="product marquee-item">
-                                        <div data-id="3"><img src="assets/draggable-grid/public/img-3.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="1"><img src="assets/draggable-grid/public/img-1.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="5"><img src="assets/draggable-grid/public/img-5.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="2"><img src="assets/draggable-grid/public/img-2.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="7"><img src="assets/draggable-grid/public/img-7.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                </div>
-                                <!-- Second column (additional set) -->
-                                <div class="column">
-                                    <div class="product marquee-item">
-                                        <div data-id="4"><img src="assets/draggable-grid/public/img-4.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="6"><img src="assets/draggable-grid/public/img-6.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="3"><img src="assets/draggable-grid/public/img-3.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="7"><img src="assets/draggable-grid/public/img-7.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="1"><img src="assets/draggable-grid/public/img-1.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                </div>
-                                <!-- Third column (additional set) -->
-                                <div class="column">
-                                    <div class="product marquee-item">
-                                        <div data-id="5"><img src="assets/draggable-grid/public/img-5.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="2"><img src="assets/draggable-grid/public/img-2.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="4"><img src="assets/draggable-grid/public/img-4.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="6"><img src="assets/draggable-grid/public/img-6.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                    <div class="product marquee-item">
-                                        <div data-id="1"><img src="assets/draggable-grid/public/img-1.png" alt="Jewelry Piece" /></div>
-                                    </div>
-                                </div>
+                                <!-- GSAP will automatically create cloned grid columns for seamless infinite scrolling -->
                             </div>
                         </div>
                     </div>
