feat: Enhance cart functionality with quantity controls and product details integration
- Updated the minicart to include quantity controls for better user experience.
- Added JavaScript functionality to handle quantity changes directly in the minicart.
- Integrated quantity input on the product details page for accurate cart additions.
- Included new CSS styles for improved layout and responsiveness of quantity controls.

--- a/corano/product-details.html
+++ b/corano/product-details.html
@@ -1330,6 +1330,8 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCfmCVTjRI007pC1Yk2o2d_EhgkjTsFVN8"></script>
     <!-- google map active js -->
     <script src="assets/js/plugins/google-map.js"></script>
+    <!-- Cart Functionality JS -->
+    <script src="assets/js/cart-functionality.js"></script>
     <!-- Main JS -->
     <script src="assets/js/main.js"></script>
 </body>
