--- a/corano/index.html
+++ b/corano/index.html
@@ -2105,7 +2105,10 @@
                                         <a href="product-details.html">Dozen White Botanical Linen Dinner Napkins</a>
                                     </h3>
                                     <p>
-                                        <span class="cart-quantity">1 <strong>&times;</strong></span>
+                                        <span class="cart-qty-control">
+                                            <span class="cart-quantity-label">Qty:</span>
+                                            <div class="pro-qty"><input type="text" value="1" min="1" max="99"></div>
+                                        </span>
                                         <span class="cart-price">$100.00</span>
                                     </p>
                                 </div>
@@ -2122,7 +2125,10 @@
                                         <a href="product-details.html">Dozen White Botanical Linen Dinner Napkins</a>
                                     </h3>
                                     <p>
-                                        <span class="cart-quantity">1 <strong>&times;</strong></span>
+                                        <span class="cart-qty-control">
+                                            <span class="cart-quantity-label">Qty:</span>
+                                            <div class="pro-qty"><input type="text" value="1" min="1" max="99"></div>
+                                        </span>
                                         <span class="cart-price">$80.00</span>
                                     </p>
                                 </div>
