--- a/corano/index.html
+++ b/corano/index.html
@@ -85,7 +85,7 @@
                         <div class="col-lg-2">
                             <div class="logo">
                                 <a href="index.html">
-                                    <img src="assets/img/jevoo-bespoke.jpg" alt="Brand Logo" style="max-height: 100px; width: auto; padding-left: 20%;">
+                                    <img src="assets/img/jevoo-bespoke.jpg" alt="Brand Logo">
                                 </a>
                             </div>
                         </div>
@@ -170,7 +170,7 @@
                         <div class="mobile-main-header">
                             <div class="mobile-logo">
                                 <a href="index.html">
-                                    <img src="assets/img/jevoo-bespoke.jpg" alt="Brand Logo" style="max-height: 100px; width: auto; padding-left: 20%;">
+                                    <img src="assets/img/jevoo-bespoke.jpg" alt="Brand Logo">
                                 </a>
                             </div>
                             <div class="mobile-menu-toggler">
